Analisi statica con SonarQube + report